# social-media-virality

./: LICENSE  Makefile  README.md  pyproject.toml
data/processed/: README.txt  cleaned_data.csv
data_processing/: __init__.py  config.py  dataset.py  features.py  hypothesis_testing.py  plots.py
data_processing/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: model_summaries.txt
notebooks/: Sprint_2.ipynb  Sprint_3-2.ipynb  Sprint_3.ipynb
